--- a/portal-frontend/src/app/features/review-application/return-application-dialog/return-application-dialog.component.scss
+++ b/portal-frontend/src/app/features/review-application/return-application-dialog/return-application-dialog.component.scss
@@ -7,14 +7,6 @@
   max-width: rem(845);
 }
 
-.content {
-  padding: rem(16);
-
-  @media screen and (min-width: $tabletBreakpoint) {
-    padding: rem(32);
-  }
-}
-
 .step-controls {
   display: flex;
   justify-content: space-between;
@@ -34,11 +26,8 @@
   }
 }
 
-.step-header {
-  margin-bottom: rem(24);
-}
-
 .step-body {
+  margin-top: rem(32);
   margin-bottom: rem(32);
 }
 
@@ -46,6 +35,13 @@
   padding: 0;
 }
 
+::ng-deep {
+  .return-application-modal {
+    .mdc-button .mdc-button__label {
+      width: 100%;
+    }
+  }
+}
 
 .reason-selector {
   width: 100%;
@@ -80,5 +76,5 @@
   border-radius: rem(4);
   padding: rem(4) rem(8);
   height: rem(120);
-  max-width: calc(100% - 1rem)
+  width: 100%;
 }
