--- a/portal-frontend/src/app/features/review-application/review-submit/review-submit.component.html
+++ b/portal-frontend/src/app/features/review-application/review-submit/review-submit.component.html
@@ -190,14 +190,20 @@
             <app-no-data [showRequired]="showErrors" *ngIf="_applicationReview.isAuthorized === null"></app-no-data>
           </div>
         </div>
-        <div class="edit-button">
+        <div *ngIf="_applicationReview.isOCPDesignation !== null || _applicationReview.isSubjectToZoning !== null" class="edit-button">
           <button mat-flat-button (click)="onEditSection(3)" color="accent">Edit Section</button>
         </div>
       </div>
     </section>
     <section>
       <h4>5. Attachments</h4>
-      <div class="review-table">
+      <div *ngIf="!this.hasCompletedStepsBeforeDocuments" class="review-table">
+        <div class="full-width">
+          Please complete Step 2 Plans & Bylaws: OCP, Step 3 Plans & Bylaws: Zoning and Step 4 Resolution to continue
+          with this step.
+        </div>
+      </div>
+      <div *ngIf="this.hasCompletedStepsBeforeDocuments" class="review-table">
         <div *ngIf="_applicationReview.isOCPDesignation || _applicationReview.isSubjectToZoning">
           <div class="subheading2">Resolution Document</div>
           <div>
@@ -425,7 +431,7 @@
             <app-no-data [showRequired]="showErrors" *ngIf="_applicationReview.isAuthorized === null"></app-no-data>
           </div>
         </div>
-        <div class="edit-button">
+        <div *ngIf="_applicationReview.isOCPDesignation !== null || _applicationReview.isSubjectToZoning !== null" class="edit-button">
           <button mat-flat-button (click)="onEditSection(3)" color="accent">Edit Section</button>
         </div>
       </div>
@@ -434,7 +440,13 @@
       <mat-expansion-panel-header>
         <h4>5. Attachments</h4>
       </mat-expansion-panel-header>
-      <div class="review-table">
+      <div *ngIf="!this.hasCompletedStepsBeforeDocuments" class="review-table">
+        <div class="full-width">
+          Please complete Step 2 Plans & Bylaws: OCP, Step 3 Plans & Bylaws: Zoning and Step 4 Resolution to continue
+          with this step.
+        </div>
+      </div>
+      <div *ngIf="this.hasCompletedStepsBeforeDocuments" class="review-table">
         <div *ngIf="_applicationReview.isOCPDesignation || _applicationReview.isSubjectToZoning">
           <div class="subheading2">Resolution Document</div>
           <div>
