--- a/alcs-frontend/src/app/features/admin/holiday/holiday.component.scss
+++ b/alcs-frontend/src/app/features/admin/holiday/holiday.component.scss
@@ -1,9 +1,7 @@
 .holiday-container {
   .holiday-search {
-    .search-control {
-      margin-right: 24px;
-      display: inline-block;
-    }
+    display: flex;
+    justify-content: space-between;
   }
   .edit-btn {
     color: green;
