wip parcel step 2

--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -4,4 +4,10 @@
     [isValidate]="isValidate"
     (isParcelDetailsValid)="parcelValidation($event)"
   ></app-parcel>
+  <app-parcel
+    [$application]="$application"
+    [isValidate]="isValidate"
+    [parcelType]="parcelType.OTHER"
+    (isParcelDetailsValid)="parcelValidation($event)"
+  ></app-parcel>
 </section>
