table with scroll

--- a/portal-frontend/src/app/features/application-details/application-details.component.scss
+++ b/portal-frontend/src/app/features/application-details/application-details.component.scss
@@ -40,6 +40,11 @@
     height: fit-content;
   }
 
+  .table-wrapper {
+    overflow-x: auto;
+    width: 100%;
+  }
+
   @media screen and (min-width: $tabletBreakpoint) {
     .flex-item {
       display: flex;
