--- a/portal-frontend/src/app/features/application-details/parcel/parcel.component.html
+++ b/portal-frontend/src/app/features/application-details/parcel/parcel.component.html
@@ -99,64 +99,66 @@
       <div class="details-wrapper">
         <h5 class="title">Owners Info</h5>
 
-        <table mat-table [dataSource]="parcel.owners">
-          <tr mat-header-row *matHeaderRowDef="ownerTableDisplayColumns"></tr>
-          <tr mat-row *matRowDef="let owner; columns: ownerTableDisplayColumns"></tr>
+        <div class="table-wrapper">
+          <table mat-table [dataSource]="parcel.owners">
+            <tr mat-header-row *matHeaderRowDef="ownerTableDisplayColumns"></tr>
+            <tr mat-row *matRowDef="let owner; columns: ownerTableDisplayColumns"></tr>
 
-          <!-- Row shown when there is no matching data. -->
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="5">
-              <app-no-data class="no-data-text" [showRequired]="isValidate"></app-no-data>
-            </td>
-          </tr>
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="5">
+                <app-no-data class="no-data-text" [showRequired]="isValidate"></app-no-data>
+              </td>
+            </tr>
 
-          <ng-container matColumnDef="ownerType">
-            <th mat-header-cell *matHeaderCellDef>Owner Type</th>
-            <td mat-cell *matCellDef="let owner">
-              {{ owner.type.description }}
-              <app-no-data [showRequired]="isValidate" *ngIf="!owner.type.description"></app-no-data>
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="ownerType">
+              <th mat-header-cell *matHeaderCellDef>Owner Type</th>
+              <td mat-cell *matCellDef="let owner">
+                {{ owner.type.description }}
+                <app-no-data [showRequired]="isValidate" *ngIf="!owner.type.description"></app-no-data>
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="fullName">
-            <th mat-header-cell *matHeaderCellDef>Full Name/ Organization</th>
-            <td mat-cell *matCellDef="let owner">
-              {{ owner.displayName }}
-              <app-no-data [showRequired]="isValidate" *ngIf="!owner.displayName"></app-no-data>
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="fullName">
+              <th mat-header-cell *matHeaderCellDef>Full Name/ Organization</th>
+              <td mat-cell *matCellDef="let owner">
+                {{ owner.displayName }}
+                <app-no-data [showRequired]="isValidate" *ngIf="!owner.displayName"></app-no-data>
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="phone">
-            <th mat-header-cell *matHeaderCellDef>Phone</th>
-            <td mat-cell *matCellDef="let owner">
-              {{ owner.phoneNumber }}
-              <app-no-data [showRequired]="isValidate" *ngIf="!owner.phoneNumber"></app-no-data>
-              <app-validation-error *ngIf="owner.validation?.isPhoneNumberInvalid" text="Phone is invalid" />
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="phone">
+              <th mat-header-cell *matHeaderCellDef>Phone</th>
+              <td mat-cell *matCellDef="let owner">
+                {{ owner.phoneNumber }}
+                <app-no-data [showRequired]="isValidate" *ngIf="!owner.phoneNumber"></app-no-data>
+                <app-validation-error *ngIf="owner.validation?.isPhoneNumberInvalid" text="Phone is invalid" />
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef>Email</th>
-            <td mat-cell *matCellDef="let owner">
-              {{ owner.email }}
-              <app-no-data [showRequired]="isValidate" *ngIf="!owner.email"></app-no-data>
-              <app-validation-error *ngIf="owner.validation?.isEmailInvalid" text="Email is invalid" />
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="email">
+              <th mat-header-cell *matHeaderCellDef>Email</th>
+              <td mat-cell *matCellDef="let owner">
+                {{ owner.email }}
+                <app-no-data [showRequired]="isValidate" *ngIf="!owner.email"></app-no-data>
+                <app-validation-error *ngIf="owner.validation?.isEmailInvalid" text="Email is invalid" />
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="corporateSummary">
-            <th mat-header-cell *matHeaderCellDef>Corporate Summary</th>
-            <td mat-cell *matCellDef="let owner">
-              <a (click)="onOpenCorporateSummaryFile(owner.corporateSummary?.uuid)">{{
-                owner.corporateSummary?.fileName
-              }}</a>
-              <app-no-data
-                [showRequired]="owner.validation?.isCorporateSummaryRequired"
-                *ngIf="!owner.corporateSummary?.uuid"
-              ></app-no-data>
-            </td>
-          </ng-container>
-        </table>
+            <ng-container matColumnDef="corporateSummary">
+              <th mat-header-cell *matHeaderCellDef>Corporate Summary</th>
+              <td mat-cell *matCellDef="let owner">
+                <a (click)="onOpenCorporateSummaryFile(owner.corporateSummary?.uuid)">{{
+                  owner.corporateSummary?.fileName
+                }}</a>
+                <app-no-data
+                  [showRequired]="owner.validation?.isCorporateSummaryRequired"
+                  *ngIf="!owner.corporateSummary?.uuid"
+                ></app-no-data>
+              </td>
+            </ng-container>
+          </table>
+        </div>
       </div>
     </div>
   </mat-expansion-panel>
