--- a/portal-frontend/src/app/shared/validation-error/validation-error.component.html
+++ b/portal-frontend/src/app/shared/validation-error/validation-error.component.html
@@ -1,4 +1,6 @@
 <div class="subtext error">
   <mat-icon>warning</mat-icon>
-  {{ text }}
+  <div class="error-description">
+    <ng-content></ng-content>
+  </div>
 </div>
