--- a/alcs-frontend/src/app/features/home/assigned/assigned.component.scss
+++ b/alcs-frontend/src/app/features/home/assigned/assigned.component.scss
@@ -25,7 +25,7 @@
   margin-top: 24px;
   margin-bottom: 32px;
 
-  tr.mat-row:hover {
+  tr.mdc-data-table__row:hover {
     box-shadow: 0 0 0 2px rgba($primary-color, 0.9);
     cursor: pointer;
     transform: scale(1);
