Fix Delete icon as ...

--- a/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.scss
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.scss
@@ -8,6 +8,12 @@
   color: $error-color;
 }
 
+:host::ng-deep {
+  .mat-mdc-icon-button .mat-mdc-button-touch-target {
+    width: 47px;
+  }
+}
+
 .flex-container {
   display: flex;
   flex-direction: row;
